--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>Her er en overskrift</h1>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Blah</a></li>
+          <li><a href="#">Blah</a></li>
+          <li><a href="#">Blah</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
