--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <h3>Main her</h3>
+    </main>
     <footer>
       <h3>Footer her</h3>
     </footer>
