--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
     <main>
       <h3>Main her</h3>
+      <p>Her er noget mere til main</p>
     </main>
     <footer>
       <h3>Footer her</h3>
